--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,12 @@
-upstream toto {
-  server 10.0.11.4:5000;
-  server 10.0.11.5:5000;
-}
+http {
+  upstream toto {
+    server 10.0.11.4:5000;
+    server 10.0.11.5:5000;
+  }
 
-server {
-  location / {
-    proxy_pass http://toto;
+  server {
+    location / {
+      proxy_pass http://toto;
+    }
   }
 }
